deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempest-exporter
  namespace: monitoring
  labels:
    app: tempest-exporter
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
      protocol: TCP
  selector:
    app: tempest-exporter
